RESOLVED FIXED54045
Fix scaling and thread safety of FFTFrameFFTW
https://bugs.webkit.org/show_bug.cgi?id=54045
Summary Fix scaling and thread safety of FFTFrameFFTW
Chris Rogers
Reported 2011-02-08 16:20:53 PST
Fix scaling and thread safety of FFTFrameFFTW
Attachments
Patch (6.90 KB, patch)
2011-02-08 16:25 PST, Chris Rogers
no flags
Patch (9.82 KB, patch)
2011-02-08 17:27 PST, Chris Rogers
no flags
Patch (9.61 KB, patch)
2011-02-08 17:30 PST, Chris Rogers
kbr: review+
Chris Rogers
Comment 1 2011-02-08 16:25:05 PST
Kenneth Russell
Comment 2 2011-02-08 17:01:38 PST
Comment on attachment 81714 [details] Patch This mostly looks good -- thanks for fixing my bugs -- but as we discussed offline we should add a static initialize() method to FFTFrame to allow the mutex to be created from a known good place, before multithreaded allocation of FFTFrames might start.
Chris Rogers
Comment 3 2011-02-08 17:27:49 PST
Chris Rogers
Comment 4 2011-02-08 17:30:57 PST
Chris Rogers
Comment 5 2011-02-08 17:31:54 PST
Added the static initialize() method.
Kenneth Russell
Comment 6 2011-02-08 17:34:46 PST
Comment on attachment 81723 [details] Patch Looks fine. Please regenerate the ChangeLog when landing to pick up the changes to newly modified files.
Chris Rogers
Comment 7 2011-02-09 12:03:38 PST
Note You need to log in before you can comment on or make changes to this bug.